css/style.css
*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}
body{
    background-color: black;
    font-family: sans-serif;
    height: 100%;
}

header{
    width: 100vw;
}
.header-buttons{
    position: fixed;
    right: 0px;
    top: 15px;
}

.header-button{
    padding: 5px 5px;
    background-color: #494949;
    border: none;
    border-radius: 5px;
    color: #fff;
}


main{
    width: 100vw;
    margin: 0 auto;
}

footer{
    background-color: #222222;
    width: 100vw;
    position: fixed;
    bottom: 0;
}

/*LAYOUT CLASS*/
.container{
    width: 90%;
    padding-top: 40px;
    margin: 0 auto;
}

.row{
    display: flex;
    flex-wrap: wrap;
}

.col-14{
    width: calc(100% / 7);
    min-width: 150px;
    padding: 20px 2.5px 0 2.5px;    
}

.col-25{
    width: 25%;
}
.col-50{
    width: 50%;
}



/*PAGE STYLES*/

.label{
    position: relative;
    bottom: 25px;
    left: 0px; 
    color: #fff;
    font-size: 12.5px;
    background-color: rgba(0, 0, 0, 0.5);
    padding: 5px;
    display: inline-block;
}


.content img{
    width: 100%;
}

.content{
    aspect-ratio: 16/9;
}

.align-center{
    text-align: center;
}
.align-end{
    text-align: end;
}

footer button{
    padding: 5px;
    background-color: #222222;
    border: none;
}

.footer-button{
    color: #fff;
}
.icon-footer i{
    font-size: 25px;
}

.red{
    color: #FA030C;
    font-size: 12.5px;
    padding: 30px 10px;
    background-color: #4A4A4A;
}

